sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:12: error: '(' expected but identifier found.
      if n=0 {
         ^AlgBubbleSort3:16: error: illegal start of simple expression
  }
  ^